--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,6 +14,8 @@
 
         <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+        <link rel="stylesheet" type="text/css" href="/assets/stylesheets/selectize.css" />
+        <link rel="stylesheet" type="text/css" href="/assets/stylesheets/selectize.bootstrap3.css" />
 
         <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css" />
         <link rel="stylesheet" type="text/css" href="/assets/stylesheets/leaflet.draw.css" />
