--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -42,6 +42,13 @@
                 overflow: auto;
                 max-height: 700px;
             }
+
+            .btn-xs {
+                width: 30px;
+            }
+            .btn-group {
+                white-space: nowrap;
+            }
         </style>
     </head>
     @content
