--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -12,9 +12,6 @@
 <script type="text/javascript" language="javascript" src="/assets/javascripts/leaflet.awesome-markers.js"></script>
 <script type="text/javascript">
     function init() {
-        var REGEX_EMAIL = '([a-z0-9!#$%&\'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&\'*+/=?^_`{|}~-]+)*@@' +
-                '(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?)';
-
         jQuery.extend({
             postJSON: function (url, data, callback) {
                 return jQuery.ajax({
@@ -79,7 +76,7 @@
         };
         L.control.layers({}, overlays).addTo(map);
 
-        var popupOptions = {minWidth: 260, maxWidth: 300};
+        var popupOptions = {maxWidth: 300};
         var organisationMarkers = [];
         var personMarkers = [];
 
@@ -112,7 +109,7 @@
 
         if ($.url().param('partyId')) {
             $.getJSON('/party/' + $.url().param('partyId'), function(party) {
-                map.setZoom(14);
+                map.setZoom(11);
                 map.panTo(new L.LatLng(party.location.latitude, party.location.longitude));
                 var icon = L.AwesomeMarkers.icon({icon : 'fa-bullseye', markerColor : 'red', prefix: 'fa'});
                 createMarkerAndAddToLayer(party).setIcon(icon).addTo(map).openPopup();
@@ -159,7 +156,10 @@
             $('#to').selectize({
                 plugins: ['remove_button'],
                 persist: false,
-                openOnFocus: false
+                openOnFocus: false,
+                onChange: function(value) {
+                    $('#email').attr("href", "mailto:" + value);
+                }
             });
         });
 
@@ -168,6 +168,10 @@
 
             if (type === 'polygon' || type === 'circle') {
                 $.postJSON('/party/search', layer.toGeoJSON(), function(data) {
+                    data = data.filter(function(party) {
+                        return party.partyId != $.url().param('partyId')
+                    });
+
                     $.each(data, function(i, party) {
                         createMarkerAndAddToLayer(party);
                     });
@@ -214,38 +218,23 @@
 </script>
 
 <script id="person-popup" type="text/x-handlebars-template">
-    <div class="row">
-        <div class="col-8">
-            <strong><span title="{{postcode}}">{{ name }}</span></strong><br/>
-            {{ join groups }}
-        </div>
-        <div class="col-4 text-right">
-            <div class="btn-group">
-                <a href="@play.Play.application().configuration().getString("crm.url")/{{ partyId }}" title="Open in Capsule CRM" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-gear fa-lg"></i></a>
-                <a href="mailto:{{ emailAddress }}?bcc=@play.Play.application().configuration().getString("crm.bcc")" title="Email {{ emailAddress }}" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-envelope-o fa-lg"></i></a>
-            </div>
-        </div>
-    </div>
+    <strong><span title="{{ join groups }} - {{postcode}}">{{ name }}</span></strong>&nbsp;&nbsp;&nbsp;
+    <a href="@play.Play.application().configuration().getString("crm.url")/{{ partyId }}" title="Open in Capsule CRM" target="_blank" class="btn btn-default btn-xs"><i class="fa fa-gear fa-lg"></i></a>
+    <a href="mailto:{{ emailAddress }}?bcc=@play.Play.application().configuration().getString("crm.bcc")" title="Email {{ emailAddress }}" target="_blank" class="btn btn-default btn-xs"><i class="fa fa-envelope-o fa-lg"></i></a>
 </script>
 
 <script id="organisation-popup" type="text/x-handlebars-template">
-    <div class="row">
-        <div class="col-7 col-md-7">
-            <strong><span title="{{postcode}}">{{ name }}</span></strong>
-        </div>
-        <div class="col-5 col-lg-5 text-right">
-            <div class="btn-group">
-                <a href="@play.Play.application().configuration().getString("crm.url")/{{ partyId }}" title="Open in Capsule CRM" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-gear fa-lg"></i></a>
-                <a href="mailto:{{ emailAddress }}?bcc=@play.Play.application().configuration().getString("crm.bcc")" title="Email {{ emailAddress }}" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-envelope-o fa-lg"></i></a>
-                <a href="{{ website }}" target="_blank" title="Open {{ website }}" class="btn btn-default btn-sm"><i class="fa fa-external-link fa-lg"></i></a>
-            </div>
-        </div>
-    </div>
+    <strong><span title="{{postcode}}">{{ name }}</span></strong>&nbsp;&nbsp;&nbsp;
+    <a href="@play.Play.application().configuration().getString("crm.url")/{{ partyId }}" title="Open in Capsule CRM" target="_blank" class="btn btn-default btn-xs"><i class="fa fa-gear fa-lg"></i></a>
+    <a href="mailto:{{ emailAddress }}?bcc=@play.Play.application().configuration().getString("crm.bcc")" title="Email {{ emailAddress }}" target="_blank" class="btn btn-default btn-xs"><i class="fa fa-envelope-o fa-lg"></i></a>
+    <a href="{{ website }}" target="_blank" title="Open {{ website }}" class="btn btn-default btn-xs"><i class="fa fa-external-link fa-lg"></i></a>
 </script>
 
 <script id="area-popup" type="text/x-handlebars-template">
-    Found {{ this.length }} parties. <button class="btn btn-primary" onclick="$('#myModal').appendTo('body').modal('show'); return false;"><i class="fa fa-envelope-o"></i></button>
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {{#if this}}
+    Found <strong>{{ this.length }}</strong> parties.&nbsp;&nbsp;&nbsp;
+    <a href="#" title="Email" class="btn btn-default btn-xs" onclick="$('#myModal').appendTo('body').modal('show'); return false;"><i class="fa fa-envelope-o fa-lg"></i></a>
+    <div class="modal fade" style="display:none;" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -261,12 +250,15 @@
                     </select>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Email</button>
+                    <a href="mailto:{{#each this}}{{this.emailAddress}},{{/each}}" id="email" title="Will open your email with all email addresses in 'to:'..." class="btn btn-primary" >Email</a>
+                    <a href="#" class="btn btn-default" data-dismiss="modal">Close</a>
                 </div>
             </div>
         </div>
     </div>
+    {{else}}
+    No parties found for selected groups.
+    {{/if}}
 </script>
 
 <body onLoad="javascript:init();">
