--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -103,18 +103,6 @@
             }
         };
 
-        if ($.url().param('partyId')) {
-            $.getJSON('/party/' + $.url().param('partyId'), function(party) {
-                map.setZoom(11);
-                map.panTo(new L.LatLng(party.location.latitude, party.location.longitude));
-                var icon = L.AwesomeMarkers.icon({icon : 'fa-bullseye', markerColor : 'red', prefix: 'fa'});
-                createMarkerAndAddToLayer(party).setIcon(icon).addTo(map).openPopup();
-            })
-            .fail(function () {
-                alert("Can't find party with id " + $.url().param('partyId'))
-            });
-        }
-
         var drawnItems = new L.FeatureGroup();
         map.addLayer(drawnItems);
 
@@ -220,6 +208,15 @@
         new L.Control.Scale({maxWidth: 1200, metric: false}).addTo(map);
         new L.Control.Scale({maxWidth: 600, metric: false}).addTo(map);
         new L.Control.Scale({maxWidth: 300, metric: false}).addTo(map);
+
+        if ($.url().param('partyId')) {
+            $.getJSON('/party/' + $.url().param('partyId'),function (party) {
+                map.panTo(new L.LatLng(party.location.latitude, party.location.longitude), {animate: false});
+                map.setZoom(11);
+                var icon = L.AwesomeMarkers.icon({icon: 'fa-bullseye', markerColor: 'red', prefix: 'fa'});
+                createMarkerAndAddToLayer(party).setIcon(icon).addTo(map).openPopup();
+            }).fail(function () { alert("Can't find party with id " + $.url().param('partyId')) });
+        }
     }
 </script>
 
