Use minified, versioned jquery.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(groups: List[String], center: models.Location)
 @main("MapMailer") {
-<script type="text/javascript" language="javascript" src="//code.jquery.com/jquery.js"></script>
+<script type="text/javascript" language="javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" language="javascript" src="/assets/javascripts/purl.js"></script>
 
 <script type="text/javascript" language="javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
