Thunderforest. [ci skip]

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -60,7 +60,7 @@
         }
 
         var mapTiles = L.tileLayer('http://{s}.tile.thunderforest.com/transport/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+            attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors. Map style &copy; <a href="http://www.thunderforest.com/">Thunderforest</a>'
         });
 
         var map = new L.Map('map', {
