--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,16 +1,16 @@
 @(groups: List[String], center: models.Location)
 @main("MapMailer") {
 <script type="text/javascript" language="javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" language="javascript" src="/assets/javascripts/purl.js"></script>
+<script type="text/javascript" language="javascript" src="@routes.Assets.at("javascripts/purl.js")"></script>
 
 <script type="text/javascript" language="javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" language="javascript" src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
-<script type="text/javascript" language="javascript" src="/assets/javascripts/swag.js"></script>
-<script type="text/javascript" language="javascript" src="/assets/javascripts/selectize.js"></script>
+<script type="text/javascript" language="javascript" src="@routes.Assets.at("javascripts/swag.js")"></script>
+<script type="text/javascript" language="javascript" src="@routes.Assets.at("javascripts/selectize.js")"></script>
 
 <script type="text/javascript" language="javascript" src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js"></script>
-<script type="text/javascript" language="javascript" src="/assets/javascripts/leaflet.draw.js"></script>
-<script type="text/javascript" language="javascript" src="/assets/javascripts/leaflet.awesome-markers.js"></script>
+<script type="text/javascript" language="javascript" src="@routes.Assets.at("javascripts/leaflet.draw.js")"></script>
+<script type="text/javascript" language="javascript" src="@routes.Assets.at("javascripts/leaflet.awesome-markers.js")"></script>
 <script type="text/javascript">
     $(function() {
         Swag.registerHelpers(Handlebars);
