--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,16 +10,16 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <link rel="shortcut icon" type="image/png" href="routes.Assets.at("images/favicon.png")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
         <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-        <link rel="stylesheet" type="text/css" href="/assets/stylesheets/selectize.css" />
-        <link rel="stylesheet" type="text/css" href="/assets/stylesheets/selectize.bootstrap3.css" />
+        <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/selectize.css")" />
+        <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/selectize.bootstrap3.css")" />
 
         <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css" />
-        <link rel="stylesheet" type="text/css" href="/assets/stylesheets/leaflet.draw.css" />
-        <link rel="stylesheet" type="text/css" href="/assets/stylesheets/leaflet.awesome-markers.css" />
+        <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/leaflet.draw.css")" />
+        <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/leaflet.awesome-markers.css")" />
 
         <style>
             html, body, #map {
