Remove limit for search. Fix button width. [ci skip]

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -28,6 +28,10 @@
                 padding:0;
                 margin:0;
             }
+            /* Specify the button width to make popup width calc correct. */
+            .btn-xs {
+                width: 30px;
+            }
             .leaflet-control-layers-expanded {
                 overflow: auto;
                 max-height: 650px;
