--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -36,6 +36,9 @@
                 overflow: auto;
                 max-height: 650px;
             }
+            .leaflet-control-draw-measure {
+                background-image: url(@routes.Assets.at("images/measure-control.png"));
+            }
         </style>
     </head>
     @content
